<resources>
    <string name="app_name">InmobiliariaBenito</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inicio">Inicio</string>
    <string name="salir">Salir</string>
    <string name="inmueble">Inmueble</string>
    <string name="inquilino">Inquilino</string>
    <string name="contrato">Contrato</string>
    <string name="perfil">Perfil</string>
    <string name="InmobiliariaBenito" />
    <string name="Inmuebles" />
    <string name="inmuebles">Inmuebles</string>
    <string name="superficie_m">Superficie (m²)</string>
    <string name="ver_inquilino">Ver Inquilino</string>
    <string name="inmueble_asociado">Inmueble asociado:</string>
    <string name="estado">Estado:</string>
    <string name="monto_mensual">Monto mensual:</string>
    <string name="fecha_de_finalizaci_n">Fecha de finalización:</string>
    <string name="fecha_de_inicio">Fecha de inicio:</string>
    <string name="detalle_del_contrato">Detalle del Contrato</string>
</resources>