<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/inmueble" />

        <item
            android:id="@+id/nav_inquilino"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/inquilino" />

        <item
            android:id="@+id/nav_contrato"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/contrato" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_camera"

            android:title="@string/perfil" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/salir" />
    </group>
</menu>
